Add a tooltip when hovering over tiles

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,20 @@ svg {
   width: 100%;
 }
 
+.tooltip {
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 1px 1px 13px 0px #828282;
+  color: #333;
+  font-size: 0.8rem;
+  line-height: 20px;
+  padding: 8px;
+  pointer-events: none;
+  position: absolute;
+  text-align: left;
+  z-index: 1;
+}
+
 .error-message {
   background: hsl(349, 96%, 95%);
   border: 1px solid hsl(349, 96%, 90%);
@@ -63,5 +77,13 @@ footer a:focus {
 
   h2 {
     font-size: 1.2rem;
+  }
+}
+
+@media only screen and (min-width: 1500px) {
+
+  .tooltip {
+    font-size: 1.1rem;
+    line-height: 24px;
   }
 }
